# choosem

./: README.md  choosem.py  pyproject.toml
choosem/: cli.py  emoji.py  main.py  utils.py
choosem/cli/: focus.py  insert.py  launch.py
