[tool.poetry]
name = "choosem"
version = "0.1.0"
description = "dropdown picker/launcher for macos"
authors = ["Bernardas Alisauskas <bernardas.alisauskas@pm.me>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
choosem = 'choosem:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
